@@ -17,7 +17,7 @@ path.photongi.indirect.enabled = 0
 #path.photongi.indirect.lookup.radius = 0.15
 #path.photongi.indirect.lookup.radius = 0.0
 #path.photongi.indirect.glossinessusagethreshold = 0.0
-#path.photongi.indirect.usagethresholdscale = 0.0
+#path.photongi.indirect.usagethresholdscale = 8.0
 #path.photongi.indirect.filter.radiusscale = 4.0
 path.photongi.caustic.enabled = 0
 #path.photongi.caustic.maxsize = 10000
@@ -55,9 +55,9 @@ film.imagepipelines.0.1.value = 2.2
 #film.imagepipelines.1.1.type = GAMMA_CORRECTION
 #film.imagepipelines.1.1.value = 2.2
 ## Optix denoiser
-film.imagepipelines.1.0.type = OPTIX_DENOISER
-film.imagepipelines.1.1.type = GAMMA_CORRECTION
-film.imagepipelines.1.1.value = 2.2
+#film.imagepipelines.1.0.type = OPTIX_DENOISER
+#film.imagepipelines.1.1.type = GAMMA_CORRECTION
+#film.imagepipelines.1.1.value = 2.2
 ##
 #film.imagepipelines.0.0.type = PATTERNS
 #film.imagepipelines.0.0.index = 0
