@@ -236,6 +236,8 @@ public:
 		delete program;
 	}
 	virtual ~BVHKernel() {
+		delete kernel;
+
 		for (u_int i = 0; i < vertsBuffs.size(); ++i)
 			device.FreeBuffer(&vertsBuffs[i]);
 		for (u_int i = 0; i < nodeBuffs.size(); ++i)
